pictor (2.0) UNRELEASED; urgency=low

  * Initial packaging
  * settings.php: prep for installation to /etc/pictor
  * debian/install: fix install typo
  * index.php:
    - print useful error message if no pictures are found
    - generate/cache thumbnails
    - add support to enable/disable search function
    - replace album search with native php code, rather than shell find
    - deprecate old location method
    - use php's exif extractor
    - get auto-rotate working for thumbnails and generated images
    - add 1920x1080 size
    - don't force size on image display
    - move get_cache_filename() to a function
    - remove search capability for now, until we have a better way of
      handling it
    - improve slideshow handling, dark background, resize form
    - index.php: color cells light blue on hover, s/surf/goto/g
    - use /var/cache/pictor/resize dir
  * debian/rules, debian/dirs, debian/links: add support for a thumbnail
    cache dir
  * debian/control:
    - bump standards ver
    - misc depends
    - depend on php's imagick module
  * debian/rules: install changelog
  * debian/copyright: drop icons artifact from musica
  * debian/dirs, debian/links, debian/postinst, debian/postrm: support
    cache resize dir, remove cache on purge, use links file


 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 26 Jan 2010 23:40:48 -0600