@@ -19,6 +19,7 @@ pictor (2.0) UNRELEASED; urgency=low
     - improve slideshow handling, dark background, resize form
     - index.php: color cells light blue on hover, s/surf/goto/g
     - use /var/cache/pictor/resize dir
+    - beautify table printing
   * debian/rules, debian/dirs, debian/links: add support for a thumbnail
     cache dir
   * debian/control:
